fix: long content in ChannelItem breaks indicator

--- a/src/components/ChannelItem/index.module.scss
+++ b/src/components/ChannelItem/index.module.scss
@@ -7,6 +7,8 @@
 	align-items: center;
 	transition: background-color 150ms, outline 150ms;
 	min-height: 32px;
+	min-width: fit-content;
+
 	color: inherit;
 
 	img,
